# tokenizer_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: th.txt
src/: lib.rs
src/dict/: mod.rs  tests.rs
src/tokenizer/: mod.rs  tests.rs
src/tokenizer/en/: mod.rs
src/tokenizer/th/: mod.rs  tests.rs
