[package]
name = "tokenizer"
version = "0.1.1"
authors = ["Nattapong Sirilappanich <nattapong.sirilappanich2@ibm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=["multi-thread"]
single-thread=[]
multi-thread=["rayon"]

[dependencies]
rayon = {version="^1.3", optional=true}

[dev-dependencies]
permutator = "^0.4"